--- a/pollutant_section.Rmd
+++ b/pollutant_section.Rmd
@@ -16,15 +16,18 @@ There are `r nrow(res$data) ` `r res$name` monitors in Indiana that have been ac
 
 Below is a plot illustrating `r res$name ` data coverage, by monitor, for all monitors that collected `r res$name ` data during the period of interest.
 
-```{r fig.width=9, fig.height=6, echo=FALSE}
+```{r fig.width=9, fig.height=9, echo=FALSE}
 coveragePlot(res$data, paste0(simpleCap(res$name), " Coverage by Monitoring Location"))
 ```
 
-Many EPA air pollutant monitors are placed relative to specific sources and so are not representative of general concentrations or population exposures. Below is a table showing the reported purpose of `r res$name ` monitors in Indiana.
+`r if("purpose" %in% names(res)) {paste0("Many EPA air pollutant monitors are placed relative to specific sources and so are not representative of general concentrations or population exposures. Below is a table showing the reported purpose of ", res$name, " monitors in Indiana.")}`
 
-```{r echo=FALSE}
-library(knitr)
-kable(res$purpose)
+```{r echo = FALSE}
+if("purpose" %in% names(res)) {
+  library(knitr)
+  kable(res$purpose)
+
+}
 ```
 
 ```{r echo=FALSE}
